--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:background="@color/black_overlay"
-    android:layout_height="match_parent">
-<ListView
-    android:id="@+id/main_listview"
-    android:divider="@color/grey"
-    android:dividerHeight="0.5dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"></ListView>
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:background="@color/grey">
+
+    <ListView
+        android:id="@+id/main_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/grey"
+        android:dividerHeight="0.5dp">
+
+    </ListView>
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp">
+
+    </ListView>
+</android.support.v4.widget.DrawerLayout>
