--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,57 @@
 
     </ListView>
 
-    <ListView
+    <LinearLayout
         android:id="@+id/left_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp">
+        android:orientation="vertical"
+        android:background="@color/grey"
 
-    </ListView>
+   >
+<TextView
+    android:layout_marginTop="8dp"
+    android:id="@+id/daochu"
+    android:layout_width="match_parent"
+    android:textSize="16sp"
+    android:background="@drawable/bg"
+    android:layout_gravity="center"
+    android:gravity="center"
+android:padding="8dp"
+    android:text="导出到邮件"
+    android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/daochuname"
+            android:layout_width="match_parent"
+            android:textSize="16sp"
+            android:background="@drawable/bg"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="导出名："
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginTop="8dp"
+            android:id="@+id/updateDate"
+            android:layout_width="match_parent"
+            android:textSize="16sp"
+            android:background="@drawable/bg"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="更新日期："
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/update"
+            android:layout_width="match_parent"
+            android:textSize="16sp"
+            android:background="@drawable/bg"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="点击更新："
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
