--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="16dp"
                 android:textColor="@color/grey"
                 android:layout_alignParentRight="true"
-                android:text="日盈亏(元)"
+                android:text="日盈亏(%)"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
         <RelativeLayout
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white2"
-                    android:text="10052.32"
+                    android:text="0"
                     />
 
             </LinearLayout>
@@ -109,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white2"
-                    android:text="10052.32"
+                    android:text="0"
                     />
 
             </LinearLayout>
@@ -131,6 +131,27 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/white2"
                     android:text="1"
+                    />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/grey"
+                    android:text="委托值"/>
+                <TextView
+                    android:id="@+id/weituo"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white2"
+                    android:text="0"
                     />
 
             </LinearLayout>
