--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -184,9 +184,110 @@
 
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_below="@+id/group_search"
+        android:id="@+id/group_head"
+        android:background="#ffffff"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/group_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="基金名称"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:id="@+id/group_daima"
+                android:layout_width="match_parent"
+                android:text="基金代码"
+                android:gravity="center"
+                android:textColor="@color/black_overlay"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/group_shizhi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="持仓值"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:id="@+id/group_shuliang"
+                android:layout_width="match_parent"
+                android:text="持仓量"
+                android:gravity="center"
+                android:textColor="@color/black_overlay"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/group_xianjia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="市价"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:id="@+id/group_chengben"
+                android:layout_width="match_parent"
+                android:text="成本价"
+                android:gravity="center"
+                android:textColor="@color/black_overlay"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/group_yked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="盈亏"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:id="@+id/group_ykbl"
+                android:layout_width="match_parent"
+                android:text="盈亏比"
+                android:gravity="center"
+                android:textColor="@color/black_overlay"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </LinearLayout>
 <ListView
-    android:layout_below="@+id/group_search"
-    android:id="@+id/main_listview"
+    android:layout_below="@+id/group_head"
+    android:id="@+id/group_listview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"></ListView>
 </RelativeLayout>
