--- a/app/src/main/res/layout/child_group_item.xml
+++ b/app/src/main/res/layout/child_group_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:id="@+id/main_item"
+    android:id="@+id/group_item"
     android:background="#ffffff"
     android:orientation="horizontal"
     android:layout_height="match_parent">
@@ -81,7 +81,7 @@
         android:orientation="vertical"
         android:layout_height="match_parent">
         <TextView
-            android:id="@+id/group_盈亏额度"
+            android:id="@+id/group_yked"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="基金名称"
@@ -90,7 +90,7 @@
             android:textColor="@color/black"
             />
         <TextView
-            android:id="@+id/group_净值"
+            android:id="@+id/group_ykbl"
             android:layout_width="match_parent"
             android:text="00001"
             android:gravity="center"
