--- a/app/src/main/res/layout/child_group_item.xml
+++ b/app/src/main/res/layout/child_group_item.xml
@@ -15,7 +15,7 @@
             android:id="@+id/group_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="基金名称"
+            android:text=""
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/group_daima"
             android:layout_width="match_parent"
-            android:text="00001"
+            android:text=""
             android:gravity="center"
             android:textColor="@color/black_overlay"
             android:layout_height="wrap_content" />
@@ -38,7 +38,7 @@
             android:id="@+id/group_shizhi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="基金名称"
+            android:text=""
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -46,7 +46,7 @@
         <TextView
             android:id="@+id/group_shuliang"
             android:layout_width="match_parent"
-            android:text="00001"
+            android:text=""
             android:gravity="center"
             android:textColor="@color/black_overlay"
             android:layout_height="wrap_content" />
@@ -61,7 +61,7 @@
             android:id="@+id/group_xianjia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="基金名称"
+            android:text=""
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -69,7 +69,7 @@
         <TextView
             android:id="@+id/group_chengben"
             android:layout_width="match_parent"
-            android:text="00001"
+            android:text=""
             android:gravity="center"
             android:textColor="@color/black_overlay"
             android:layout_height="wrap_content" />
@@ -84,7 +84,7 @@
             android:id="@+id/group_yked"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="基金名称"
+            android:text=""
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -92,7 +92,7 @@
         <TextView
             android:id="@+id/group_ykbl"
             android:layout_width="match_parent"
-            android:text="00001"
+            android:text=""
             android:gravity="center"
             android:textColor="@color/black_overlay"
             android:layout_height="wrap_content" />
